# ToyNet

./: README.md  pom.xml
Net/src/main/java/Data/: DataConfig.java  Parser.java  Tensor.java  TensorGetHelper.java  TensorObjBridge.java
Net/src/main/java/com/andrew/toynet/: ToyNetApplication.java
Net/src/test/java/Data/: ParserTest.java  TensorTest.java
TensorObj/: CMakeLists.txt  TensorObj.cpp  TensorObj.h
src/main/java/Data/: DataConfig.java  Parser.java  Tensor.java  TensorConfig.java  arrayHelper.java
src/main/java/com/andrew/toynet/: AppConfig.java  ToyNetApplication.java
src/main/resources/: application.properties
src/test/java/Data/: ArrayTest.java  ParserTest.java  TensorTest.java
src/test/java/com/andrew/toynet/: ToyNetApplicationTests.java
